# Second-hand-car-price-predictor

./: .gitignore  Dockerfile  Makefile  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci_cd.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
dvclive/: metrics.json  params.yaml
dvclive/plots/metrics/: cross_val_score_metric.tsv
mlruns/0/: meta.yaml
mlruns/0/20b22eef5b8a42d3aaeef816d4c30880/: meta.yaml
mlruns/0/20f49f15bba946e99b9f76d02fe2b2fa/: meta.yaml
mlruns/0/229ddf10838f4845a657e8998c04df4d/: meta.yaml
mlruns/0/2483cf45c15e4eeebb7788ffd2bcb14d/: meta.yaml
mlruns/0/343c42f2058a4748901eeca67e855b16/: meta.yaml
mlruns/0/38a86dc391d843b1b180f6126586a33c/: meta.yaml
mlruns/0/3b23107273004023b31fab93a49d83f6/: meta.yaml
mlruns/0/3bcc2738f42744a79264ea4f8fe8b79f/: meta.yaml
mlruns/0/704d1ce11e1b45a496fe7c824c3ae3c8/: meta.yaml
mlruns/0/93105240e65f48d195801da87f4da181/: meta.yaml
notebooks/: 1_Preprocessing.ipynb  3_model.ipynb
notebooks/dvclive/: metrics.json  params.yaml
notebooks/mlruns/0/: meta.yaml
second_hand_car_price_prediction/: 0_cleaning.py  1_dataset.py  1_transformation.py  2_dataset.py  3_model.py  __init__.py  bring_dataset.py  dataset.py  features.py  generate_report.py  plots.py
second_hand_car_price_prediction/Final_Pipeline/: pipeline.py  temp.csv
second_hand_car_price_prediction/Frontend/: main.py  pipeline.py
second_hand_car_price_prediction/modeling/: predict.py  train.py
(+95 files in other folders)
