[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "second_hand_car_price_prediction"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Pankaj Maulekhi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["second_hand_car_price_prediction"]
force_sort_within_sections = true


